--- a/opentreemap/treemap/css/sass/modules/_checkboxes.scss
+++ b/opentreemap/treemap/css/sass/modules/_checkboxes.scss
@@ -3,7 +3,7 @@
     input[type='checkbox'] {
         opacity: 0;
         float: left;
-        width: 20px;
+        width: 0;
 
         & + label {
             margin: 0;
