--- a/opentreemap/treemap/css/sass/partials/pages/_sidebar.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_sidebar.scss
@@ -14,6 +14,7 @@
         overflow: auto;
     }
     .panel {
+        border: none;
         margin: 0;
     }
     .panel-group {
@@ -24,6 +25,7 @@
     }
     .panel-heading {
         background: $secondary-color;
+        padding: 0;
 
         a {
             text-decoration: none;
@@ -34,6 +36,7 @@
             padding: 15px;
             font-size: 1.6rem;
             font-weight: 700;
+            display: block;
 
             &.collapsed {
                 color: lighten($secondary-color, 35%);
@@ -57,6 +60,7 @@
 
     .panel-body {
         background: white;
+        padding: 0;
 
         .panel-body-buttons {
             padding: 10px 15px;
@@ -137,18 +141,18 @@
         }
         &.resource-benefit {
             .benefit-icon {
-                background: $secondary-color;
+                background: $button-success;
             }
             .benefit-label {
-                color: $secondary-color;
+                color: $button-success;
             }
         }
 
         .benefit-icon {
             padding: 5px;
-            background: $primary-color;
-            width: 16px;
-            height: 16px;
+            background: $button-primary;
+            width: 26px;
+            height: 26px;
             border-radius: 999px;
             color: white;
             float: left;
@@ -156,8 +160,9 @@
             margin-bottom: 0;
 
             > i {
-                margin-top: 1px;
-                font-size: 1.2rem;            
+                top: -5px;
+                font-size: 1.2rem;
+                position: relative;        
             }
         }
         .benefit-label {
@@ -166,7 +171,7 @@
             float: left;
             margin: 2px 0 0;
             line-height: 2.1rem;
-            color: $primary-color;
+            color: $button-primary;
             max-width: 265px;
         }
         .benefit-content {
