--- a/opentreemap/treemap/templates/registration/login.html
+++ b/opentreemap/treemap/templates/registration/login.html
@@ -32,8 +32,8 @@
     $(function(){
         // Add additional classes to the fields generated
         // by the stock Django login form
-        $('input[type="text"]').addClass('input-xlarge');
-        $('input[type="password"]').addClass('input-xlarge');
+        $('input[type="text"]').addClass('input-xlarge form-control');
+        $('input[type="password"]').addClass('input-xlarge form-control');
         $('input[name="username"]').focus();
         $('ul.errorlist').addClass('alert alert-danger');
     })
