--- a/opentreemap/treemap/templates/registration/password_reset_form.html
+++ b/opentreemap/treemap/templates/registration/password_reset_form.html
@@ -20,7 +20,7 @@
 <script>
     (function (require) {
         var $ = require('jquery')
-        $("input:text:visible:first").focus();
+        $("input:text:visible:first").addClass('form-control').focus();
     }(require))
 </script>
 {% endblock %}
