--- a/opentreemap/treemap/templates/treemap/partials/diameter_calculator.html
+++ b/opentreemap/treemap/templates/treemap/partials/diameter_calculator.html
@@ -12,7 +12,7 @@
     <tr id="trunk-row">
       <td>
         <div class="input-group">
-          <input class="input-small"
+          <input class="input-sm form-control"
                  data-class="diameter-input"
                  type="text"
                  data-value="{{ field.value|unlocalize }}"
@@ -23,7 +23,7 @@
       </td>
       <td>
         <div class="input-group">
-          <input class="input-small"
+          <input class="input-sm form-control"
                  data-class="circumference-input"
                  type="text"
                   />
