--- a/opentreemap/treemap/css/sass/partials/_subheader.scss
+++ b/opentreemap/treemap/css/sass/partials/_subheader.scss
@@ -10,7 +10,7 @@
     -webkit-transform: translateY(-100%);
     transform: translateY(-100%);
     transition: all 400ms cubic-bezier(0, 0, 0.1, 1);
-    margin-top: 45px;
+    margin-top: 42px;
     box-shadow: 0 6px 0 rgba(0,0,0,.15);
 
     &.expanded {
@@ -24,15 +24,19 @@
     > .advanced-search {
         padding: 20px;
         background: lighten($primary-color, 45%);
+        border-bottom: 1px solid lighten($primary-color, 15%);
 
         form {
             margin: 0 0 10px;
         }
 
         .search-range {
-            margin-bottom: 5px;
+            margin-bottom: 8px;
             clear: both;
 
+            > * {
+                float: left;
+            }
             > label {
                 display: inline-block;
                 width: 120px;
@@ -43,7 +47,7 @@
             
             @media #{$screen-lg} {
                 label {
-                    top: -3px;
+                    top: 8px;
                 }
             }
             @media #{$screen-ltlg} {
@@ -69,25 +73,32 @@
             }
         }
         .input-group {
+            width: 120px;
+
             input[type="text"] {
                 width: 82px;
 
                 & + span {
                     margin: 0 0 0 -1px;
+                    top: 0;
                 }
             }
 
             & + span {
                 margin: 0 10px;
                 font-size: 1.4rem;
+                top: 6px;
+                position: relative;
             }
         }
         input[type="text"] {
-            width: 119px;
+            width: 120px;
 
             & + span {
                 margin: 0 10px;
                 font-size: 1.4rem;
+                top: 6px;
+                position: relative;
             }
         }
 
@@ -196,8 +207,8 @@
                 opacity: 0.5;
                 pointer-events: none;
                 color: white;
-                right: 10px;
-                top: 12px;
+                right: 13px;
+                top: 17px;
             }
             &:hover {
                 select {
@@ -214,7 +225,7 @@
                 background: $primary-color;
                 display: inline-block;
                 margin: 0;
-                padding: 13px 33px 15px 15px;
+                padding: 15px 33px 15px 15px;
                 font-weight: 500;
                 -webkit-appearance: none;
                 -moz-appearance: none;
@@ -290,12 +301,12 @@
         }
     }
     > .stats-bar {
-        padding: 11px 15px 10px;
+        padding: 10px 15px 10px;
         border-left: 8px solid $primary-color;
         font-size: 1.6rem;
         font-weight: 300;
         background: lighten($primary-color, 45%);
-        height: 24px;
+        height: 42px;
         position: relative;
         z-index: 9;
         color: darken($primary-color, 25%);
@@ -311,13 +322,13 @@
 
         .addBtn {
             float: right;
-            margin-top: -3px;
+            margin-top: -4px;
             margin-left: 7px;
 
             i {
                 position: relative;
                 left: -4px;
-                top: 2px;
+                top: 0;
             }
         }
     }
