--- a/opentreemap/treemap/css/sass/partials/pages/_profile.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_profile.scss
@@ -78,7 +78,7 @@
 .profile {
     .profile-tabs {
         height: 85px;
-        margin-bottom: 20px;
+        margin-bottom: 25px;
 
         .nav.nav-tabs {
             border: none;
@@ -121,9 +121,10 @@
                 }
                 .number {
                     display: block;
-                    font-weight: 400;
+                    font-weight: 700;
                     font-size: 2.4rem;
-                    margin: 3px 0;
+                    line-height: 2.4rem;
+                    margin: 0;
                     min-height: 20px;
                 }
             }
