--- a/opentreemap/treemap/css/sass/partials/pages/_registration.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_registration.scss
@@ -19,6 +19,7 @@
         font-weight: 300;
         color: $main-text-color;
         margin: 0 -20px 20px -20px;
+        box-sizing: content-box;
     }
     form {
         p.required {
@@ -28,6 +29,11 @@
                     margin-left: 5px;
                 }
             }
+        }
+        button.btn {
+            margin: 0 auto;
+            display: block;
+            padding: 10px 26px;
         }
     }
 }
