--- a/opentreemap/treemap/templates/registration/registration_form.html
+++ b/opentreemap/treemap/templates/registration/registration_form.html
@@ -28,7 +28,7 @@
         {{ form.as_p }}
 
         {% block submit_button %}
-        <button type="submit" class="btn btn-lg form-control btn-primary" value="{% trans 'Submit' %}" >{% trans "Submit" %}</button>
+        <button type="submit" class="btn btn-lg btn-primary" value="{% trans 'Submit' %}" >{% trans "Submit" %}</button>
         {% endblock submit_button %}
       </fieldset>
     </form>
