--- a/opentreemap/treemap/templates/treemap/partials/upload_image.html
+++ b/opentreemap/treemap/templates/treemap/partials/upload_image.html
@@ -1,15 +1,19 @@
-<div id="{{ panel_id }}" class="modal hide fade">
-  <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    <h2>{{ title }}</h2>
-  </div>
-  <div class="modal-body">
-    <input class="fileChooser" type="file" name="file" data-url="{{ upload_photo_endpoint }}" accept="image/*">
-    <div class="progress">
-      <div class="progress-bar-info" style="width: 0%; height: 100%"></div>
+<div id="{{ panel_id }}" class="modal fade">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h2>{{ title }}</h2>
+      </div>
+      <div class="modal-body">
+        <input class="fileChooser" type="file" name="file" data-url="{{ upload_photo_endpoint }}" accept="image/*">
+        <div class="progress">
+          <div class="progress-bar-info" style="width: 0%; height: 100%"></div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <a href="#" class="btn" data-dismiss="modal">Cancel</a>
+      </div>
     </div>
-  </div>
-  <div class="modal-footer">
-    <a href="#" class="btn" data-dismiss="modal">Cancel</a>
   </div>
 </div>
