--- a/opentreemap/treemap/templates/treemap/partials/photo_carousel.html
+++ b/opentreemap/treemap/templates/treemap/partials/photo_carousel.html
@@ -29,16 +29,14 @@
 </div>
 {% for photo in photos %}
   <div id="photo-lightbox-{{ forloop.counter0 }}" class="lightbox hide fade" tabindex="-1" role="dialog" aria-hidden="true">
-    <div class="lightbox-header">
-      <button type="button" class="close" data-dismiss="lightbox" aria-hidden="true">X</button>
-    </div>
+    <button type="button" class="close" data-dismiss="lightbox" aria-hidden="true">&times;</button>
     <div class="lightbox-content">
       <img data-photo-image src="{{ photo.image }}">
       <div class="lightbox-caption">
-        <a class="btn pull-left" data-class="view" data-photo-edit>{% trans "Edit" %}</a>
-        <a class="btn pull-left" data-class="edit" data-photo-rotate="-90"><i class="icon-ccw"></i></a>
-        <a class="btn pull-right" data-class="edit" data-photo-rotate="90"><i class="icon-cw"></i></a>
-        <button data-class="edit" disabled="disabled" class="btn"
+        <a class="btn btn-small pull-right" data-class="view" data-photo-edit>{% trans "Edit" %}</a>
+        <a class="btn btn-small pull-left btn-rotate" data-class="edit" data-photo-rotate="-90"><i class="icon-ccw"></i></a>
+        <a class="btn btn-small pull-left btn-rotate" data-class="edit" data-photo-rotate="90"><i class="icon-cw"></i></a>
+        <button data-class="edit" disabled="disabled" class="btn btn-small pull-right"
             data-photo-save="{% url 'rotate_photo' instance_url_name=request.instance.url_name feature_id=photo.map_feature photo_id=photo.id %}">{% trans "Save" %}</button>
       </div>
     </div>
