--- a/opentreemap/treemap/templates/treemap/map-browse-trees.html
+++ b/opentreemap/treemap/templates/treemap/map-browse-trees.html
@@ -50,7 +50,7 @@
   {% if request.instance_supports_ecobenefits %}
   <div class="panel-group">
     <div class="panel-heading">
-      <a class="panel-toggle" data-toggle="collapse" data-parent="#map-info" href="#yearlyEco">{% trans "Yearly Eco Benefits" %} <span class="arrow pull-right"><i class="icon-right-open"></i></span></a>
+      <a class="panel-toggle" data-toggle="collapse" data-parent="#map-info" href="#yearlyEco">{% trans "Eco Benefits" %} <span class="arrow pull-right"><i class="icon-right-open"></i></span></a>
     </div>
     <div id="yearlyEco" class="panel-body collapse in">
       <div class="panel-inner benefit-values" id="benefit-values"></div>
