--- a/opentreemap/treemap/css/sass/partials/_subheader.scss
+++ b/opentreemap/treemap/css/sass/partials/_subheader.scss
@@ -322,8 +322,8 @@
 
         .addBtn {
             float: right;
-            margin-top: -4px;
-            margin-left: 7px;
+            margin-top: -6px;
+            margin-left: 8px;
 
             i {
                 position: relative;
@@ -331,5 +331,12 @@
                 top: 0;
             }
         }
+    }
+}
+
+#missing-data,
+#display-filters {
+    span { 
+        display: block;
     }
 }
