Add tree key help link to species input
fixes #1354 on github

--- a/opentreemap/treemap/css/sass/partials/pages/_map.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_map.scss
@@ -191,3 +191,8 @@ span.tt-dropdown-menu {
         }
     }
 }
+
+.external-help-link {
+    font-size: 1.2rem;
+    font-weight: 400 !important;
+}
