--- a/opentreemap/treemap/templates/treemap/partials/diameter_calculator.html
+++ b/opentreemap/treemap/templates/treemap/partials/diameter_calculator.html
@@ -43,4 +43,7 @@
 <p id="diameter-calculator-total-row" style="display: none">
   {% trans "Combined Diameter:" %} <span id="diameter-calculator-total-reference"></span>{% if field.units %} {{ field.units }}{% endif %}
 </p>
-<a id="diameter-video" href="http://player.vimeo.com/video/11119129" target="_blank"><i class="icon-videocam"></i> {% trans "Need help measuring the tree?" %}</a>
+<a id="diameter-video"
+   class="external-help-link"
+   href="http://player.vimeo.com/video/11119129"
+   target="_blank"><i class="icon-videocam"></i> {% trans "Need help measuring the tree?" %}</a>
