--- a/opentreemap/treemap/css/sass/partials/pages/_addtree.scss
+++ b/opentreemap/treemap/css/sass/partials/pages/_addtree.scss
@@ -96,6 +96,9 @@
                 select {
                     font-size: 1.2rem;
                 }
+                .twitter-typeahead{
+                        display:block !important;
+                    }
 
                 .form-search {
                     margin: 0;
