--- a/opentreemap/treemap/templates/treemap/partials/photo_carousel.html
+++ b/opentreemap/treemap/templates/treemap/partials/photo_carousel.html
@@ -32,7 +32,7 @@
 {% for photo in photos %}
 {% endfor %}
 {% if photos|length > 1 %}
-<a class="carousel-control left disabled" href="" data-slide="prev"><i class="icon-left-circled"></i></a>
+<a class="carousel-control left" href="#photo-carousel" data-slide="prev"><i class="icon-left-circled"></i></a>
 <a class="carousel-control right" href="#photo-carousel" data-slide="next"><i class="icon-right-circled"></i></a>
 {% endif %}
 {% if error %}
