Style login/registration and create map process

--- a/opentreemap/treemap/css/sass/partials/_layout.scss
+++ b/opentreemap/treemap/css/sass/partials/_layout.scss
@@ -76,6 +76,9 @@ body {
         display: block;
         z-index: 0;
     }
+    &.create-map {
+        margin-top: 50px;
+    }
 
     > div {
         z-index: 10;
