--- a/opentreemap/treemap/templates/registration/login.html
+++ b/opentreemap/treemap/templates/registration/login.html
@@ -40,10 +40,8 @@
     </form>
   </div>
   <div class="well login-signup-panel signup-option">
-    <p>
-      {% trans "Don't have an account?" %}
+      <h3>{% trans "Don't have an account?" %}</h3>
       <a class="btn btn-lg btn-primary" href="{% url 'registration_register' %}">{% trans "Register" %}</a>
-    </p>
   </div>
 </div>
 {% endblock content %}
