--- a/opentreemap/treemap/templates/registration/password_reset_form.html
+++ b/opentreemap/treemap/templates/registration/password_reset_form.html
@@ -4,7 +4,7 @@
 {% block content %}
 <div class="content login-signup">
   <div class="well login-signup-panel">
-    <h2>{% trans "Reset your Password" %}</h2>
+    <legend>{% trans "Reset your Password" %}</legend>
     <p>{% trans "Forgot the password for your tree map account? Enter your email address and click \"Send\" to receive info on resetting your password." %}</p>
     <form method="post" action=".">
       {% csrf_token %} 
