--- a/opentreemap/treemap/templates/treemap/forgot_username.html
+++ b/opentreemap/treemap/templates/treemap/forgot_username.html
@@ -4,15 +4,21 @@
 {% block content %}
 <div class="content login-signup">
   <div class="well login-signup-panel">
-    <h2>{% trans "Retrieve your Username" %}</h2>
+    <legend>{% trans "Retrieve your Username" %}</legend>
     <p>{% trans "Forgot the username for your tree map account? Enter your email address and click \"Send\" to receive an email with your username." %}</p>
     <form method="post" action=".">
       {% csrf_token %}
       <label>
         {% trans "Email Address" %}
-        <input type="email" name="email" />
       </label>
-      <input type="submit" class="btn btn-primary" value="{% trans 'Send' %}" />
+      <div class="row">
+          <div class="col-md-9">
+              <input type="email" name="email" />
+          </div>
+          <div class="col-md-3">
+              <input type="submit" class="btn btn-block btn-primary" value="{% trans 'Send' %}" />
+          </div>
+      </div>
     </form>
   </div>
 </div>
