--- a/opentreemap/treemap/css/sass/partials/_typography.scss
+++ b/opentreemap/treemap/css/sass/partials/_typography.scss
@@ -66,12 +66,22 @@ textarea,
 	border-radius: 6px;
 	box-shadow: 0 2px 0 #DDD inset;
 	box-shadow: 0 2px 0 rgba(0,0,0,.1) inset;
+    display: block;
+    width: 100%;
+    line-height: 1.42857143;
+    background-color: #ffffff;
+    background-image: none;
+    border: 1px solid #cccccc;
+    -webkit-transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
+    transition: border-color ease-in-out .15s, box-shadow ease-in-out .15s;
 
 	&:focus {
 		color: $main-text-color;
 		box-shadow: 0 2px 0 rgba(0,0,0,.15) inset,
 					0 1px 1px rgba(0, 0, 0, 0.075) inset, 
 					0 0 8px rgba(82, 168, 236, 0.6);
+        border-color: #66afe9;
+        outline: 0;
 	}
 }
 
