Remove URL from button

--- a/opentreemap/treemap/templates/registration/activation_complete.html
+++ b/opentreemap/treemap/templates/registration/activation_complete.html
@@ -6,7 +6,7 @@
   <div class="well login-signup-panel">
     <legend>{% trans "Account created!" %}</legend>
     <p>{% trans "Congratulations! Your OpenTreeMap account has now been created. You just received an email to confirm your email address, but in the meantime, why not explore some nearby tree maps?" %}</p>
-    <a href="https://www.opentreemap.org#explore" class="btn btn-primary btn-lg">Explore Tree Maps</a>
+    <a href="" class="btn btn-primary btn-lg">Explore Tree Maps</a>
   </div>
 </div>
 {% endblock %}
